--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ h5, h6          { font-weight: bolder }
 .billboard{
     width: 100%;
     height: 690px;
-    position: relative;
+    background-position: center top;
 }
 
 .billboard.light{
