--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ h5, h6          { font-weight: bolder }
     position: absolute;
     width: 100%;
     height: 142px;
-    bottom: 0;
+    bottom: 0px;
     left: 0;
     margin-bottom: -1px;
     background: url('../img/shadow.png') repeat-x;
